--- a/style.css
+++ b/style.css
@@ -2,25 +2,27 @@
     box-sizing: border-box;
   }
   
+
+  /* Style the header active*/
+
+  .header-active {
+    color: #000000;
+  }
+
+/* copy
+
+.header a.active {
+  background-color: #4CAF50;
+  color: black;
+
+*/
+
   /* Style the body */
   body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
   }
-  
-  /* Header/logo Title */
-  .header {
-    padding: 80px;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
-  }
-  
-  /* Increase the font size of the heading */
-  .header h1 {
-    font-size: 40px;
-  }
-  
+
   /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
   .navbar {
     overflow: hidden;
@@ -40,7 +42,6 @@
     text-decoration: none;
   }
   
-  
   /* Right-aligned link */
   .navbar a.right {
     float: right;
@@ -54,8 +55,8 @@
   
   /* Active/current link */
   .navbar a.active {
-    background-color: #666;
-    color: white;
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 115, 115);
   }
   
   /* Column container */
