--- a/css/carousel_style.css
+++ b/css/carousel_style.css
@@ -8,21 +8,21 @@
       }
 
       .carousel-item:nth-child(1) {
-        background-image: url('../images/sunset.jpg');
+        background-image: url('images/sunset.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
       }
 
       .carousel-item:nth-child(2) {
-        background-image: url('../images/tawharanui.jpg');
+        background-image: url('images/tawharanui.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
       }
 
       .carousel-item:nth-child(3) {
-        background-image: url('../images/waves.jpg');
+        background-image: url('images/waves.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
