Admin done, beginning prints page

--- a/css/carousel_style.css
+++ b/css/carousel_style.css
@@ -1,8 +1,4 @@
-
-      
-      
-      
-      /* Carousel styling */
+ /* Carousel styling */
       #introCarousel,
       .carousel-inner,
       .carousel-item,
@@ -11,21 +7,21 @@
       }
 
       .carousel-item:nth-child(1) {
-        background-image: url('images/sunset.jpg');
+        background-image: url('../images/sunset.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
       }
 
       .carousel-item:nth-child(2) {
-        background-image: url('images/tawharanui.jpg');
+        background-image: url('../images/tawharanui.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
       }
 
       .carousel-item:nth-child(3) {
-        background-image: url('images/waves.jpg');
+        background-image: url('../images/waves.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
